# belem

./: README.md  environment.yml  pyproject.toml
belem/: _version.py  utils.py
belem/data/: offset_densities.json  offset_densities_lower_skeletal.json  offset_densities_skeletals.json  offset_densities_upper_skeletal.json  radius_densities_lattice.json  radius_densities_lattice_cell_size_4.json
belem/default_simcoon_files/: constants.inp  gen0.inp  ident_control.inp  ident_essentials.inp  solver_control.inp
belem/fem/: fea.py  identification.py  postprocess.py  report.py
belem/latticegen/: __init__.py  abstractLattice.py  bcc.py  bcc_perio.py  bodyCenteredCubic.py  cuboctahedron.py  kelvin.py  octetTruss.py  octettruss.py  truncatedOctahedron.py
belem/utils/: __init__.py  column_header.py
scripts/FiniteElementAnalysis/: run_elastic_plastic_tension.py
scripts/data/: box.vtk  box_effective_stiffness_tensor.txt  cuboct20_effective_stiffness_tensor.txt
scripts/finite_element_analysis/: run_elastic_plastic_tension.py
scripts/linear_homogenization/: run_linear_homogenization.py
scripts/mwe/: init_snake_case.py  sheet_cadquery_bug.py  skeletal_cadquery_bug.py
scripts/non_linear_homogenization/: homogenized_law_identification.py  postprocess_nonlinear_homogenization.py  run_all_fea_computations.py
tests/: test_is_periodic.py  test_meshPeriodic.py
